apps/db-client/CloudBeaver-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver-svc
  namespace: mysql
  labels:
    app-name: CloudBeaver
    version: ${CLOUDBEAVER_VERSION}
    component: database-client
    hostNetwork: "no"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  type: ClusterIP
  ports:
    - port: 8978
      targetPort: 8978
      name: tcp
  selector:
    app-name: CloudBeaver
