apps/db-client/CloudBeaver-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloudbeaver-gateway
  namespace: mysql
  labels:
    app-name: CloudBeaver
    version: ${CLOUDBEAVER_VERSION}
    component: database-client
    hostNetwork: "no"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - $CLOUDBEAVER_DOMAIN
    tls:
      httpsRedirect: true
  - hosts:
      - $CLOUDBEAVER_DOMAIN
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cloudbeaver-letsencrypt-certificate
